# SportoweSwiry

./: .gitignore  Exceptions.cpp  image_procesing_1.cpp  jakistestowy.cpp
Computer architecture/: TASK1.CPP  task.cpp  task3.cpp  task4.cpp
Image processing/: CMakeLists.txt  New Text Document.txt  image_processing.xlsx  newhope.cpp
Image processing/include/: Fourier.h  IMAGE.h
Image processing/src/: Fourier.cpp  IMAGE.cpp  Task2.cpp  Task3.cpp  help.txt  image_procesing_1.cpp  newhope.cpp  picture.cpp  test.cpp
OOP/: CMakeLists.txt  Diagram1.dia
OOP/include/: ComputerPlayer.h  ComputerStrategies.h  GAME.H  GRID.H  HumanPlayer.h  PLAYER.H  SHIP.H  TextUI.h
OOP/src/: ComputerPlayer.cpp  ComputerStrategies.cpp  Game.cpp  Grid.cpp  HumanPlayer.cpp  Player.cpp  Ship.cpp  TextUI.cpp  main.cpp
OOP/test/: ComputerPlayerTest.cpp  ComputerStrategiesTest.cpp  GridTest.cpp  ShipTest.cpp  master.cpp  tests.cpp
OOP/xother_stuff/: Diagram1.dia
test_oop_complex/: CMakeLists.txt
test_oop_complex/include/: ComplexNumber.h
test_oop_complex/src/: ComplexNumber.cpp
test_oop_complex/test/: ComplexNumberTest.cpp  master.cpp
